--- a/assets/package.json
+++ b/assets/package.json
@@ -6,7 +6,10 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix_live_view": "file:../deps/phoenix_live_view"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
