--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view"
@@ -22,6 +23,7 @@
     "font-awesome-loader": "^1.0.2",
     "phoenix": "^1.4.7",
     "phoenix_html": "^2.13.2",
+    "popper.js": "^1.14.3",
     "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
