--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -33,3 +33,6 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            LICENSE
