--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -34,5 +34,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
+          generate_release_notes: true
           files: |
             LICENSE
