--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -31,9 +31,14 @@ jobs:
       - name: Dockerhub push
         run: echo "Aqui lo subo a docker hub"
 
+      - name: Build Changelog
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          generate_release_notes: true
           files: |
             LICENSE
