--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -40,5 +40,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
+          body: ${{steps.github_release.outputs.changelog}}
           files: |
             LICENSE
