--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -43,3 +43,4 @@ jobs:
           body: ${{steps.github_release.outputs.changelog}}
           files: |
             LICENSE
+            AUTHORS.md
