--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: Pull Request
+name: Test
 
 #on: [pull_request]
 on: [push]
@@ -15,9 +15,6 @@ jobs:
 
       - name: Start env
         run: APP_COMMAND='tail -f /dev/null' make env-start
-
-#      - name: Wait for start
-#        run: while true; do curl -sSf http://localhost:4001 > /dev/null 2&>1 && break || echo “Waiting to elixir server” && sleep 10; done
 
       - name: Test
         run: make test
