--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -13,20 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-#      - name: docker-compose build
-#        run: make build
-#
-#      - name: Start env
-#        run: make env-start
-#
-#      - name: Wait for start
-#        run: while true; do curl -sSf http://localhost:4001 > /dev/null 2&>1 && break || echo “Waiting to elixir server” && sleep 10; done
-#
-#      - name: Test
-#        run: make test
-
-#      - name: Build image
-#        run: make build-prod
+      - name: Build image
+        run: make build-prod
 
       - name: Dockerhub push
         run: echo "Aqui lo subo a docker hub"
