--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -13,11 +13,29 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build image
-        run: make build-prod
+#      - name: Build image
+#        run: make build-prod
+#
+#      - name: Dockerhub push
+#        run: echo "Aqui lo subo a docker hub"
 
-      - name: Dockerhub push
-        run: echo "Aqui lo subo a docker hub"
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: mercadona/postoffice
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: false
+          tags: ${{ steps.meta.outputs.tags }}
 
       - name: Build Changelog
         id: github_release
