--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'master'
+      - 'github-action'
 
 jobs:
   build:
@@ -23,3 +24,22 @@ jobs:
 
       - name: Coveralls
         run: make coveralls-github
+
+      #      - name: Login to Docker Hub
+      #        uses: docker/login-action@v2
+      #        with:
+      #          username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set outputs
+        id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Check outputs
+        run: echo ${{ steps.vars.outputs.sha_short }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: false
+          tags: mercadona/postoffice:beta, mercadona/postoffice:master-${{ steps.vars.outputs.sha_short }}
