--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,8 +10,15 @@ jobs:
   build:
     runs-on: ubuntu-20.04
 
+    env:
+      ENV_FILE: test.env
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
       - uses: actions/checkout@v3
+
+      - name: Append GITHUB_TOKEN
+        run: echo -e "\nGITHUB_TOKEN=${GITHUB_TOKEN}" >> docker/envfiles/test.env
 
       - name: docker-compose build
         run: make build
