--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Test
         run: make test
 
-#      - name: Coveralls
-#        run: make coveralls-github
+      - name: Coveralls
+        run: make coveralls-github
 
       #      - name: Login to Docker Hub
       #        uses: docker/login-action@v2
