--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,6 +12,7 @@ jobs:
     env:
       MIX_ENV: test
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_SHA:
 
     steps:
       - uses: actions/checkout@v3
@@ -28,12 +29,6 @@ jobs:
       - name: Coveralls
         run: make coveralls-github
 
-      #      - name: Login to Docker Hub
-      #        uses: docker/login-action@v2
-      #        with:
-      #          username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Set outputs
         id: vars
         run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
@@ -41,8 +36,8 @@ jobs:
       - name: Check outputs
         run: echo ${{ steps.vars.outputs.sha_short }}
 
-      - name: Build and push
+      - name: Build image
         uses: docker/build-push-action@v3
         with:
           push: false
-          tags: mercadona/postoffice:beta, mercadona/postoffice:master-${{ steps.vars.outputs.sha_short }}
+          tags: mercadonatechoss/postoffice:beta, mercadonatechoss/postoffice:master-${{ steps.vars.outputs.sha_short }}
