--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -4,7 +4,7 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-      - '*'
+      - 'v*'
 
 jobs:
   build:
@@ -13,22 +13,22 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
+         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: mercadona/postoffice
+          images: mercadonatechoss/postoffice
 
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          push: false
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
 
       - name: Build Changelog
