--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       context: ..
       dockerfile: docker/Dockerfile.local
     image: $DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG$DOCKER_BRANCH_NAME
+    environment:
+      - MIX_ENV
     env_file:
       - envfiles/local.env
     depends_on:
@@ -31,6 +33,9 @@ services:
 
   app:
     image: $DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG$DOCKER_BRANCH_NAME
+    environment:
+      - MIX_ENV
+      - GITHUB_TOKEN
     env_file:
       - envfiles/local.env
     restart: on-failure
@@ -42,7 +47,7 @@ services:
         condition: "service_completed_successfully"
     ports:
       - "4001:4000"
-    command: mix phx.server
+    command: $APP_COMMAND
     volumes:
       - '../lib:/app/lib'
       - '../priv:/app/priv'
