--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -11,16 +11,16 @@ WORKDIR $APP_HOME
 COPY . .
 RUN chmod +x docker/scripts/wait-for-it.sh
 
-RUN apt-get update \
+RUN mix local.hex --force \
+    && mix archive.install --force hex phx_new 1.4.11\
+    && apt-get update \
     && curl -fsSL https://deb.nodesource.com/setup_16.x | bash \
     && apt-get install -y apt-utils \
     && apt-get install -y nodejs \
     && apt-get install -y build-essential \
     && apt-get install -y inotify-tools \
-
-RUN mix local.hex --force && \
-    mix local.rebar --force && \
-    mix deps.get
+    && mix deps.get \
+    && mix local.rebar --force
 
 RUN cd assets && npm install
 
