--- a/docker/envfiles/local.env
+++ b/docker/envfiles/local.env
@@ -4,3 +4,4 @@ DB_PORT=5432
 GOOGLE_APPLICATION_CREDENTIALS=/app/config/dummy-credentials.json
 GCLOUD_PUBSUB_PROJECT_ID=fake
 MAX_BULK_MESSAGES=10
+POSTOFFICE_SENTRY_DSN=http://b09884b492cb4b18a71f377052bc19a9@sentry.sta.monline/123
