bing back the change in dockerfile.local

--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -22,5 +22,6 @@ RUN mix local.hex --force \
     && mix deps.get \
     && mix local.rebar --force
 
+RUN cd assets && npm install
 
 CMD ["mix", "phx.server"]
